récupération données base MongoDB

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-top-bar></app-top-bar>
-<app-matiere-premieres></app-matiere-premieres>
-<router-outlet />
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
