ajout des données et correction affichage date

--- a/src/app/matiere-premieres/matiere-premieres.component.html
+++ b/src/app/matiere-premieres/matiere-premieres.component.html
@@ -6,6 +6,11 @@
       <th>Type</th>
       <th>Nom</th>
       <th>Fournisseur</th>
+      <th>Référence</th>
+      <th>N° lot</th>
+      <th>N° lot fournisseur</th>
+      <th>Acceptation du lot</th>
+      <th>C/NC</th>
       <th>Commentaires</th>
     </tr>
   </thead>
@@ -14,6 +19,11 @@
       <td>{{ matiere.Type }}</td>
       <td>{{ matiere.Nom }}</td>
       <td>{{ matiere.Fournisseur }}</td>
+      <td>{{ matiere.Reference }}</td>
+      <td>{{ matiere.No_lot }}</td>
+      <td>{{ matiere.No_lot_fournisseur }}</td>
+      <td>{{ matiere.Acceptation_lot | date: "yyyy-MM-dd" }}</td>
+      <td>{{ matiere.C_NC }}</td>
       <td>{{ matiere.Commentaires }}</td>
     </tr>
   </tbody>
