--- a/src/styles.scss
+++ b/src/styles.scss
@@ -184,3 +184,6 @@ main {
     margin-block: 1.5rem;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
